IBUS_SUNPINYIN_DATADIR = $(pkgdatadir)/data
IBUS_SUNPINYIN_ICONDIR = $(pkgdatadir)/icons

ibus_sunpinyin_datadir   = $(IBUS_SUNPINYIN_DATADIR)
ibus_sunpinyin_data_DATA = $(top_builddir)/data/lm_sc.t3g \
                           $(top_builddir)/data/pydict_sc.bin \
                           $(top_builddir)/data/quanpin.dat 

icondir                  = $(IBUS_SUNPINYIN_ICONDIR)
icon_DATA                = sunpinyin-logo.png \
                           $(top_builddir)/data/eng.svg            \
                           $(top_builddir)/data/han.svg            \
                           $(top_builddir)/data/cnpunc.svg         \
                           $(top_builddir)/data/enpunc.svg         \
                           $(top_builddir)/data/fullwidth.svg      \
                           $(top_builddir)/data/halfwidth.svg      \
                           $(top_builddir)/data/setup.svg

EXTRA_DIST = sunpinyin-logo.png
